service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: my-app
